<resources>
    <string name="app_name">TennisTune</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_detecting">Listening…</string>
    <string name="button_reset">Reset</string>
    <string name="title_settings_page">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_save">Save</string>
    <string name="button_settings">Settings</string>
    <string name="display_unit_label">Display Unit</string>
    <string name="racquet_head_size_sq_in_label">Racquet Head Size (sq in)</string>
    <string name="string_mass_density_g_m_label">String Mass Density (g/m)</string>
    <string name="racquet_head_size_100">100</string>
    <string name="string_mass_density">1.53</string>
    <string name="radio_button_kg">kg</string>
    <string name="radio_button_lb">lb</string>
    <string name="title_home_page">TennisTune</string>
    <string name="invalid_inputs">Invalid inputs</string>
    <string name="string_mass_density_accepted_range">Accepted range: 0.5 – 3.0</string>
    <string name="supported_head_size">Supported range: 85 – 130</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to discard them?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="settings_changed">Settings changed</string>
    <string name="racquets">Racquets</string>
    <string name="add_a_new_racquet">Add Racquet</string>
    <string name="racquet_info">Racquet Information</string>
    <string name="racquet_name">Racquet Name</string>
    <string name="new_racquet">New Racquet</string>
    <string name="add_edit_racquet">Add/Edit Racquet</string>
    <string name="check_mark_content_description">Check mark for selected racquet</string>
    <string name="delete_this_racquet">Delete this racquet</string>
    <string name="edit_this_racquet">Edit this racquet</string>
    <string name="edit_racquet">Edit Racquet</string>
    <string name="add_racquet">Add Racquet</string>
    <string name="add">Add</string>
    <string name="info_changed">Racquet info changed</string>
    <string name="racquet_name_cannot_be_empty">Racquet name cannot be empty</string>
    <string name="reset_audio_detection">Reset audio detection</string>
    <string name="settings_button_description">Open Settings page</string>
    <string name="racquets_button_description">Open Racquets page</string>
</resources>