<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Tennis_tune.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_bar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black_light"
            app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tensionTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:gravity="bottom|center_horizontal"
                android:maxLines="1"
                android:text="@string/text_detecting"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_light"
                app:autoSizeMaxTextSize="120sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/unitTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/unitTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal|top"
                android:maxLines="1"
                android:padding="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_light"
                app:autoSizeMaxTextSize="34sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:layout_constraintBottom_toTopOf="@+id/visualizer_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tensionTextView" />

            <LinearLayout
                android:id="@+id/visualizer_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/resetButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/unitTextView" />

            <ImageView
                android:id="@+id/resetButton"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/reset_audio_detection"
                android:src="@drawable/baseline_restart_alt_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visualizer_container" />

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resetButton">

                <ImageView
                    android:id="@+id/racquetsButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/racquets_button_description"
                    android:fadingEdge="horizontal|vertical"
                    android:padding="4dp"
                    android:src="@drawable/tennis_racquet_icon" />

                <ImageView
                    android:id="@+id/settingsButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/settings_button_description"
                    android:fadingEdge="horizontal|vertical"
                    android:src="@drawable/baseline_settings_24" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>